@@ -1,3 +1,8 @@
+2018-09-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* docker/ci/Dockerfile: Set env var RunAllRcppTests=yes
+	* .travis.yml: Do not set env var here as needed in Docker
+
 2018-09-21  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 0.12.19
